--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <title>Learning how to learn</title>
 </head>
 <body>
   <div class="page">
     <header class="header">
-
+      <img class="logo logo_place_header" src="./images/logo_place_header.png">
+      <h1 class="header__title">Learning how to learn</h1>
+      <h2 class="header__subtitle">The most effective, cutting-edge learning techniques that you can apply to your daily life. <br><a class="header__link" href="#">Learn More --></a></h2>
+      <img class="header__main-illustration" src="./images/header-image.png" alt="woman standing upon rock">
+      <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
