--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 <body>
   <div class="page">
-   <!--<header class="header">
+   <header class="header">
       <img class="logo logo_place_header" src="./images/logo_place_header.png">
       <h1 class="header__title">Learning how to learn</h1>
       <h3 class="header__subtitle">The most effective, cutting-edge learning techniques that you can apply to your daily life. <br><a class="header__link" href="#">Learn More →</a></h3>
       <img class="header__main-illustration" src="./images/header-image.png" alt="woman standing upon rock">
       <div class="header__square-pic"></div>
     </header>
+
     <main class="content"> 
       <section class="description">
         <div class="two-columns">
@@ -115,26 +116,25 @@
         <img class="kaufman__triangle" alt="a tilted blue triangle" src="../images/kaufman-triangle.svg">
       </section>
     </main>
-  -->
-    <footer class="footer">
-      <div class="columns"></div>
-      <div class="footer__column_content_copyright"></div>
-      <div class="footer__column_content_info"></div>
-      <div class="footer__column_content_social"></div>
-      <img class="logo_place_footer" alt="Practicum logo" src="../images/logo_place_footer.png">
-      <p class="footer__author">&copy; 2021. Abby Brockamp</p>
-      <h4 class="footer__column-heading">About Practicum by Yandex</h4>
-      <div class="column-links">
-        <a class="footer__column-links" href="#">Home Page</a>
-        <a class="footer__column-links" href="#">Concept</a>
-        <a class="footer__column-links" href="#">Mentors</a>
-    </div>
-    <h4 class="footer__column-heading">Social Links</h4>
-    <div class="footer__social-links">
-      <a class="footer__social-icon" href="https://www.facebook.com/YPracticum/">Facebook</a>
-      <a class="footer__social-icon" href="https://www.instagram.com/y_practicum/?hl=en">Instagram</a>
-  </div>
 
+    <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__column_content_copyright">
+          <p class="footer__author">&copy; 2021. Abby Brockamp</p>
+        </div>
+        <div class="footer__column_content_info">
+          <h4 class="footer__column-heading">About Practicum by Yandex</h4>
+          <a class="footer__column-links" href="#">Home Page</a>
+          <a class="footer__column-links" href="#">Concept</a>
+          <a class="footer__column-links" href="#">Mentors</a>
+        </div>
+        <div class="footer__column_content_social">
+          <h4 class="footer__column-heading">Social Links</h4>
+          <a class="footer__social-icon" href="https://www.facebook.com/YPracticum/"><img alt="facebook logo" src="../images/facebook_color_white.svg"> Facebook</a>
+          <a class="footer__social-icon" href="https://www.instagram.com/y_practicum/?hl=en"><img alt="Instagram logo" src="../images/instagram_color_white.svg"> Instagram</a>
+      </div>
+      <img class="logo logo_place_footer" alt="Practicum logo" src="../images/logo_place_footer.png">
+      </div>
     </footer>
   </div>
 </body>
