--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
    <header class="header">
-      <img class="logo logo_place_header" src="./images/logo_place_header.png">
+      <img class="logo logo_place_header" src="./images/logo_place_header.png" alt="Practicum logo">
       <h1 class="header__title">Learning how to learn</h1>
       <h3 class="header__subtitle">The most effective, cutting-edge learning techniques that you can apply to your daily life. <br><a class="header__link" href="#">Learn More →</a></h3>
       <img class="header__main-illustration" src="./images/header-image.png" alt="woman standing upon rock">
@@ -113,7 +113,7 @@
             <td class="table__text_theme_dark">Emphasis quantity and speed.</td>
           </tr>
         </table>
-        <img class="kaufman__triangle" alt="a tilted blue triangle" src="../images/kaufman-triangle.svg">
+        <img class="kaufman__triangle" src="../images/kaufman-triangle.svg" alt="a tilted blue triangle">
       </section>
     </main>
 
@@ -130,8 +130,8 @@
         </div>
         <div class="footer__column_content_social">
           <h4 class="footer__column-heading">Social Links</h4>
-          <a class="footer__social-icon" href="https://www.facebook.com/YPracticum/"><img alt="facebook logo" src="../images/facebook_color_white.svg"> Facebook</a>
-          <a class="footer__social-icon" href="https://www.instagram.com/y_practicum/?hl=en"><img alt="Instagram logo" src="../images/instagram_color_white.svg"> Instagram</a>
+          <a class="footer__social-icon" href="https://www.facebook.com/YPracticum/"><img src="../images/facebook_color_white.svg" alt="facebook logo"> Facebook</a>
+          <a class="footer__social-icon" href="https://www.instagram.com/y_practicum/?hl=en"><img src="../images/instagram_color_white.svg" alt="Instagram logo"> Instagram</a>
       </div>
       <img class="logo logo_place_footer" alt="Practicum logo" src="../images/logo_place_footer.png">
       </div>
