--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <th class="table__heading">1885</th>
             <th class="table__heading">1897</th>
           </tr>
-          <tr class="table__cell"></tr>
+          <tr class="table__cell">
             <td class="table__text">The number of adults under 25 with insufficient education for finding employment</td> 
             <td class="table__text">Peak learning age</td>
             <td class="table__text">Development of the forgetting curve</td>
