Finalized file paths. README.md added.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p class="two-columns__paragraph">There are certain techniques and exercises that can be applied to the learning process to help make it more efficient and engaging. This is exactly what we do at Practicum.</p>
           </div>
         </article>
-        </section>
+      </section>
 
       <section class="techniques">
         <h2 class="section-title">Learning Techniques</h2>
@@ -79,7 +79,7 @@
           title="YouTube video player" 
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
           allowfullscreen></iframe>
-          </div>
+        </div>
       </section>
 
       <section class="oakley">
@@ -209,7 +209,6 @@
             <p class="table__text table__text_theme_dark">Focus your energy on one skill at a time.</p>
           </li>
 
-        
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">8</h3>
             <p class="table__text table__text_theme_dark">Define your target performance level.</p>
@@ -225,8 +224,8 @@
             <p class="table__text table__text_theme_dark">Emphasize quantity and speed.</p>
           </li>
         </ul>
-
-        <div class="kaufman__triangle rotation"></div>
+        <div class="kaufman__triangle rotation">
+        </div>
       </section>
 
     
