--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
           src="https://www.youtube.com/embed/5MgBikgcWnY" 
           title="YouTube video player" 
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-          allowfullscreen>
+          allowfullscreen> Josh Kaufman's TED Talk: The first 20 hours -- how to learn anything.
           </iframe>
           <iframe class="video__iframe" 
           src="https://www.youtube.com/embed/arj7oStGLkU" 
           title="YouTube video player" 
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-          allowfullscreen>
+          allowfullscreen> Tim Urban's TED Talk: Inside the mind of a master procrastinator.
           </iframe>
         </div>
       </section>
