Video section BEM edit

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </ul>
       </section>
 
-      <section class="videos">
+      <section class="video">
         <h2 class="section-title">TED talks</h2>
         <p class="section-subtitle">For lovers of procrastination</p>
         <div class="video__iframes">
