Updated image file paths. Linked normalize.css.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p class="section-subtitle">Five Strategies from Barbara Oakley</p>
         <ul class="cards">
           <li class="cards__item">
-            <img src="../images/cards-attention.png" alt="A book entitled 101 Eassays that will change the way you think" class="cards__image">
+            <img src="./images/cards-attention.png" alt="A book entitled 101 Eassays that will change the way you think" class="cards__image">
             <h3 class="cards__title">Two Ways of Thinking</h3>
             <p class="cards__description">Deep understanding comes from being able to toggle back and forth between focused and diffused thinking.</p>
           </li>
@@ -234,10 +234,11 @@
       <section class="resources">
         <h1 class="section-title">Useful resources</h1>
         <p class="section-subtitle">Further material on learning techniques and hacks.</p>
-        <div class="resources__logo-zone"><img src="../images/logo/resources-tedED.png" alt="TedEd logo." class="resources__logo">
-          <img src="../images/logo/resources-Medium.png" alt="Medium logo." class="resources__logo">
-          <img src="../images/logo/resources-dezeen.png" alt="Dezeen logo" class="resources__logo">
-          <img src="../images/logo/resources-goodreads.png" alt="Goodreads logo." class="resources__logo">
+        <div class="resources__logo-zone">
+          <img src="./images/logo/resources-tedED.png" alt="TedEd logo." class="resources__logo">
+          <img src="./images/logo/resources-Medium.png" alt="Medium logo." class="resources__logo">
+          <img src="./images/logo/resources-dezeen.png" alt="Dezeen logo" class="resources__logo">
+          <img src="./images/logo/resources-goodreads.png" alt="Goodreads logo." class="resources__logo">
         </div>
       </section>
     </main>
