--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./vendor/noralize.css">
   <link rel="stylesheet" href="./pages/index.css">
   <title>Learning how to learn</title>
 </head>
@@ -73,14 +72,12 @@
           src="https://www.youtube.com/embed/5MgBikgcWnY" 
           title="YouTube video player" 
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-          allowfullscreen> Josh Kaufman's TED Talk: The first 20 hours -- how to learn anything.
-          </iframe>
+          allowfullscreen></iframe>
           <iframe class="video__iframe" 
           src="https://www.youtube.com/embed/arj7oStGLkU" 
           title="YouTube video player" 
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-          allowfullscreen> Tim Urban's TED Talk: Inside the mind of a master procrastinator.
-          </iframe>
+          allowfullscreen></iframe>
         </div>
       </section>
 
@@ -232,13 +229,13 @@
 
     
       <section class="resources">
-        <h1 class="section-title">Useful resources</h1>
+        <h2 class="section-title">Useful resources</h2>
         <p class="section-subtitle">Further material on learning techniques and hacks.</p>
         <div class="resources__logo-zone">
-          <img src="./images/logo/resources-tedED.png" alt="TedEd logo." class="resources__logo">
-          <img src="./images/logo/resources-Medium.png" alt="Medium logo." class="resources__logo">
-          <img src="./images/logo/resources-dezeen.png" alt="Dezeen logo" class="resources__logo">
-          <img src="./images/logo/resources-goodreads.png" alt="Goodreads logo." class="resources__logo">
+          <a class="resources__link" href="https://www.ted.com/" target="_blank"><img src="./images/logo/resources-tedED.png" alt="TedEd logo." class="resources__logo"></a>
+          <a class="resources__link" href="https://medium.com/" target="_blank"><img src="./images/logo/resources-Medium.png" alt="Medium logo." class="resources__logo"></a>
+          <a class="resources__link" href="https://www.dezeen.com/" target="_blank"><img src="./images/logo/resources-dezeen.png" alt="Dezeen logo" class="resources__logo"></a>
+          <a class="resources__link" href="https://www.goodreads.com/" target="_blank"><img src="./images/logo/resources-goodreads.png" alt="Goodreads logo." class="resources__logo"></a>
         </div>
       </section>
     </main>
